--- a/package.json
+++ b/package.json
@@ -8,8 +8,31 @@
     "start": "next start"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.15",
+    "@material-ui/core": "^4.12.3",
+    "@zeit/next-sass": "^1.0.1",
+    "clsx": "^1.1.1",
+    "css-loader": "^6.2.0",
+    "file-loader": "^6.2.0",
+    "firebase": "^8.2.7",
     "next": "10.0.7",
+    "next-compose-plugins": "^2.2.1",
+    "next-images": "^1.8.1",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-lazy-load-image-component": "^1.5.1",
+    "react-masonry-css": "^1.0.16",
+    "style-loader": "^3.2.1",
+    "url-loader": "^4.1.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.3.1",
+    "postcss": "^8.3.6",
+    "tailwindcss": "^2.2.7",
+    "tailwindcss-debug-screens": "^2.1.0",
+    "webpack": "^5.47.1",
+    "webpack-cli": "^4.7.2"
   }
 }
