--- a/package.json
+++ b/package.json
@@ -12,27 +12,40 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
     "@material-ui/core": "^4.12.3",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "clsx": "^1.1.1",
     "css-loader": "^6.2.0",
+    "draft-js": "^0.11.7",
     "file-loader": "^6.2.0",
     "firebase": "^8.2.7",
     "next": "10.0.7",
     "next-compose-plugins": "^2.2.1",
     "next-images": "^1.8.1",
+    "plaiceholder": "^2.0.1",
     "react": "17.0.1",
+    "react-blurhash": "^0.1.3",
     "react-dom": "17.0.1",
+    "react-draft-wysiwyg": "^1.14.7",
+    "react-html-parser": "^2.0.2",
     "react-lazy-load-image-component": "^1.5.1",
     "react-masonry-css": "^1.0.16",
+    "sharp": "^0.29.1",
     "style-loader": "^3.2.1",
-    "url-loader": "^4.1.1"
+    "url-loader": "^4.1.1",
+    "webpack": "^5.56.0",
+    "webpack-cli": "^4.8.0"
   },
   "devDependencies": {
+    "@ckeditor/ckeditor5-dev-utils": "^25.4.4",
     "autoprefixer": "^10.3.1",
     "postcss": "^8.3.6",
+    "raw-loader": "^4.0.2",
     "tailwindcss": "^2.2.7",
-    "tailwindcss-debug-screens": "^2.1.0",
-    "webpack": "^5.47.1",
-    "webpack-cli": "^4.7.2"
+    "tailwindcss-debug-screens": "^2.1.0"
+  },
+  "browser": {
+    "child_process": false
   }
 }
